# horoscopes

./: .gitignore
horoscopes-api/: .gitignore  Cargo.toml  Makefile  README.md  REF.md  TODO.md  docker-compose.dev.yml  rustfmt.toml
horoscopes-api/doc/architecture/decisions/: 0001-introduce-architecture-decision-record.md  0002-draft-architecture-of-error-handling.md  0003-id-generator.md
horoscopes-api/migrations/2021-04-05-134652_create_todos/: down.sql  up.sql
horoscopes-api/migrations/2021-04-30-013630_create_accounts/: up.sql
horoscopes-api/migrations/2021-05-20-114434_create_users/: down.sql  up.sql
horoscopes-api/migrations/2021-05-20-120000_create_accounts/: down.sql  up.sql
horoscopes-api/migrations/2021-05-20-121421_create_organizations/: up.sql
horoscopes-api/migrations/2021-05-20-121634_create_users_organizations/: down.sql  up.sql
horoscopes-api/migrations/2021-05-23-131018_create_diagnoses_table/: down.sql  up.sql
horoscopes-api/src/: db.rs  lib.rs  main.rs  schema.rs  state.rs
horoscopes-api/src/clients/: oauth2.rs
horoscopes-api/src/domain/: errors.rs  mod.rs
horoscopes-api/src/errors/: mod.rs
horoscopes-api/src/filters/: accounts.rs  errors.rs  mod.rs  oauth2.rs  todos.rs
horoscopes-api/src/handlers/: accounts.rs  mod.rs  oauth2.rs
horoscopes-api/src/models/: accounts.rs  answer_frames.rs  diagnoses.rs  mod.rs  organizations.rs  questions.rs  todos.rs  users.rs  users_organizations.rs
horoscopes-api/src/usecases/: create_todo_usecase.rs  errors.rs  get_todo_usecase.rs  list_todos_usecase.rs  mod.rs  update_todo_usecase.rs
(+85 files in other folders)
