[package]
name = "horoscopes-api"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "^1.0.41"
serde = { version = "^1.0.101", features = ["derive"] }
oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
diesel = { version = "1.4.4", feature = ["mysql", "r2d2"] }
once_cell = "^1.7.2"
