[package]
name = "horoscopes-api"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "^1.0.41"
serde = { version = "^1.0.101", features = ["derive"] }
oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
diesel = { version = "1.4.4", feature = ["mysql", "r2d2"] }
once_cell = "^1.7.2"
hyper = "^0.14.5"
bytes = "^1.0.1"
assert-json-diff = "^2.0.1"
ulid =  { version = "0.4.1", featur = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
rust-argon2 = "0.8"
jwt = "0.13.0"
hmac = "0.10.0"
sha2 = "0.9.3"
chrono = "0.4"
